# BootControl

./: .claudeignore  .gitignore  ABOUT.md  AGENT.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TESTING.md
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: dbus.rs  main.rs  rescue.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: boot_manager.rs  error.rs  grub.rs  hash.rs  initramfs.rs  lib.rs  prober.rs  secureboot.rs
crates/core/src/backends/: grub.rs  mod.rs  systemd_boot.rs  uki.rs
crates/daemon/: CLAUDE.md  Cargo.toml
crates/daemon/src/: audit.rs  dbus_error.rs  failsafe.rs  grub_manager.rs  grub_rebuild.rs  interface.rs  lib.rs  main.rs  polkit.rs  prober.rs  sanitize.rs  snapshot.rs  systemd_boot_manager.rs  uki_manager.rs
crates/daemon/src/initramfs/: dracut.rs  kernel_install.rs  mkinitcpio.rs  mod.rs
crates/daemon/src/secureboot/: mod.rs  mok.rs  nvram.rs  paranoia.rs
crates/gui/: Cargo.toml  build.rs
crates/gui-spike/: Cargo.toml  README.md
crates/gui/assets/fonts/: README.md
crates/gui/assets/onboarding/: bootloader.md
crates/gui/src/: backend.rs  dbus.rs  lib.rs  main.rs  view_model.rs
crates/gui/tests/: smoke_tests.rs
crates/gui/tests/common/: mod.rs
crates/gui/ui/: appwindow.slint  tokens.slint  types.slint
crates/gui/ui/components/: action_footer.slint  audit_log_link.slint  card.slint  checkbox.slint  command_disclosure.slint  confirmation_sheet.slint  danger_button.slint  diff_preview.slint  ghost_button.slint  info_bar.slint  loading_bar.slint  onboarding_card.slint  preflight_card.slint  primary_button.slint  recovery_viewer.slint  section_header.slint  sidebar.slint  status_card.slint  styled_input.slint  warning_banner.slint
crates/gui/ui/pages/: boot_entries.slint  bootloader.slint  logs.slint  overview.slint  secure_boot.slint  security_lab.slint  settings.slint  snapshots.slint
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  dbus.rs  events.rs  lib.rs  main.rs  popup.rs  ui.rs
data/: bootcontrold.service  org.bootcontrol.conf  org.bootcontrol.policy
debian/: bootcontrol.install  bootcontrold.install  bootcontrold.postinst  bootcontrold.service  bootcontrold.socket  changelog  control  copyright  rules
docs/: CLAUDE_DESIGN_BRIEF.md  GUI_V2_SPEC.md  GUI_V2_SPEC_v2.md  UX_BRIEF.md  UX_MAPPING.md  slint-a11y-findings.md
docs/handoff/: HANDOFF.md  tokens.slint
docs/red-team/: a11y.md  beginner.md  power-user.md  sysadmin.md
packaging/: bootcontrol.desktop  policy.toml.example
packaging/aur/: .SRCINFO  PKGBUILD
packaging/dbus/: org.bootcontrol.Manager.conf  org.bootcontrol.Manager.service
packaging/polkit/: org.bootcontrol.policy
packaging/rpm/: bootcontrol.spec
packaging/systemd/: bootcontrold.service  bootcontrold.socket
tests/e2e/: Cargo.toml
tests/e2e/src/: concurrent_write.rs  etag_mismatch.rs  grub_roundtrip.rs  helpers.rs  main.rs  secureboot_mok.rs  secureboot_paranoia.rs
tests/fixtures/: dummy.efi
