[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
    "crates/gui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Szymon Paczos"]
license = "GPL-3.0"
repository = "https://github.com/szymonpaczos/bootcontrol"

[workspace.dependencies]
bootcontrol-core = { path = "crates/core" }
