[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
    "crates/gui",
    "crates/gui-spike",
    "crates/client",
    "tests/e2e"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Szymon Paczos"]
license = "GPL-3.0"
repository = "https://github.com/szymonpaczos/bootcontrol"

[workspace.dependencies]
bootcontrol-core = { path = "crates/core" }
bootcontrol-client = { path = "crates/client" }
sha2     = "0.10"
hex      = "0.4"
zbus     = { version = "5", default-features = false, features = ["tokio"] }
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
nix      = { version = "0.29", features = ["fs"] }
anyhow      = "1"
which       = "7"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1
