[package]
name = "bootcontrol-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
zbus = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
bootcontrol-core = { workspace = true }
