[package]
name = "bootcontrold"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
polkit-mock = []

[dependencies]
bootcontrol-core = { workspace = true }
zbus            = { version = "5", default-features = false, features = ["tokio"] }
tokio           = { version = "1", features = ["full"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix             = { version = "0.29", features = ["fs"] }
chrono          = { version = "0.4", default-features = false, features = ["std", "clock"] }
which           = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "bootcontrold"
path = "src/lib.rs"

[[bin]]
name = "bootcontrold"
path = "src/main.rs"
