[package]
name = "bootcontrol-gui"
version = "0.1.0"
edition = "2024"

[lib]
name = "bootcontrol_gui"
path = "src/lib.rs"

[dependencies]
slint = "1.8"
bootcontrol-core = { workspace = true }
bootcontrol-client = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
arboard = "3"
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
anyhow = { workspace = true }
nix = { workspace = true, features = ["signal", "process"] }
tempfile = { workspace = true }

